--- a/syllabus.html
+++ b/syllabus.html
@@ -30,6 +30,7 @@
 				<a href="mailto:nhbean@ksu.edu">nhbean@ksu.edu</a>
 			</td>
 		</tr>
+		<tr>
 			<td>
 				<b>Classrom</b>
 			</td>
@@ -65,6 +66,7 @@ CMST 135 before joining this course.
 <h3>Course Objectives</h3>
 <p>
 At the end of this course, students should be able to:
+	</p>
 	<ul>
 		<li>Create three-tier web applications</li>
 		<li>Be experienced with Agile development</li>
@@ -73,11 +75,12 @@ At the end of this course, students should be able to:
 		<li>Develop an understanding of how techniques used in web programing can be beneficially incorporated within general development efforts</li>
 		<li>Be able to quickly learn web frameworks implemented in different languages</li>
 	</ul>
-</p>
+
 
 <h3>Course Outline</h3>
 <p>
 The following is a general layout, and is subject to change:
+	</p>
 	<ol>
 		<li>HTML5, CSS3, and user agents</li>
 		<li>Hyper-Text Transfer Protocol</li>
@@ -106,7 +109,6 @@ The following is a general layout, and is subject to change:
 		<li>Scalability</li>
 		<li>Web Frameworks</li>
 	</ol>
-</p>
 
 <h3>Course Structure</h3>
 <p>
@@ -127,14 +129,38 @@ reviews from this phase will account for the equivalent of a letter grade.
 </p>
 
 <h3>Grading Breakdown</h3>
-
-|Category|Weight|
-|---|---|
-|Class Participation|20%|
-|Assignments|30%|
-|Open House Presentation|10%|
-|Peer Evaluations|10%|
-|Final Project|30%|
+<table>
+	<thead>
+		<tr>
+			<td><b>Category</b></td>
+			<td><b>Weight</b></td>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Class Participation</td>
+			<td>20%</td>
+		</tr>
+		<tr>
+			<td>Assignments</td>
+			<td>30%</td>
+		</tr>
+		<tr>
+			<td>Open House Presentation</td>
+			<td>10%</td>
+		</tr>
+		<tr>
+			<td>Peer Evaluations</td>
+			<td>
+				10%
+			</td>
+		</tr>30%
+		<tr>
+			<td>Final Project</td>
+			<td>116 Engineering Hall</td>
+		</tr>
+	</tbody>
+</table>
 
 <h3>Resources</h3>
 <p>
