--- a/syllabus.html
+++ b/syllabus.html
@@ -59,7 +59,8 @@ understand.  Make good use of office hours.
 You should have completed CIS 501 with a C or better, and have the equivalent 
 experience of CMST 135 with HTML, CSS, and JavaScript.  If you do not, I strongly 
 recommend you take a (free) crash course on HTML & CSS through 
-[https://codecademy.com](https://codecademy.com) or wait until you have taken 
+<a href="https://codecademy.com">https://codecademy.com</a>
+or wait until you have taken 
 CMST 135 before joining this course.
 </p>
 
@@ -115,7 +116,7 @@ The following is a general layout, and is subject to change:
 In recognition of the importance of hands-on learning, this course utilizes a 
 blended lecture/lab format, where theoretical understanding is immediately put 
 to use programming software drawing upon that theoretical understanding.  
-Effective learning following this strategy _depends_ upon active participation; 
+Effective learning following this strategy <i>depends</i> upon active participation; 
 accordingly it is necessary to both attend class and participate in in-class 
 activities to succeed.
 </p>
@@ -151,13 +152,11 @@ reviews from this phase will account for the equivalent of a letter grade.
 		</tr>
 		<tr>
 			<td>Peer Evaluations</td>
-			<td>
-				10%
-			</td>
-		</tr>30%
+			<td>10%</td>
+		</tr>
 		<tr>
 			<td>Final Project</td>
-			<td>116 Engineering Hall</td>
+			<td>30%</td>
 		</tr>
 	</tbody>
 </table>
@@ -172,19 +171,19 @@ of extremely helpful resources you will want to use.
 <p>
 We will be using the Github Classroom to for obtaining starter code and 
 submitting assignments.  The classroom can be reached here: 
-[https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class](https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class).
+<a href="https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class">https://classroom.github.com/classrooms/25181973-k-state-spring-17-cis-526-class</a>.
 </p>
 
 <p>
 If you have not yet, I strongly encourage you to sign up with Github as a student: 
-[https://education.github.com/](https://education.github.com/).
+<a href="https://education.github.com/">https://education.github.com/</a>.
 </p>
 
 <h4>Safari Online</h4>
 <p>
 K-State libraries has obtained a Safari Books Online library containing over 6k 
 current titles.  You can access this collection using your eid and password here: 
-[http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu](http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu)
+<a href="http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu">http://proquestcombo.safaribooksonline.com.er.lib.k-state.edu</a>
 </p>
 
 <h4>Websites and Wikis</h4>
@@ -193,28 +192,38 @@ The following are some helpful websites for web development
 </p>
 
 <p>
-<b>W3C Standards</b> [https://www.w3.org/community/webed/wiki/Main_Page](https://www.w3.org/standards)
+<b>W3C Standards</b> 
+<a href="https://www.w3.org/community/webed/wiki/Main_Page">https://www.w3.org/standards</a>
 </p>
 
 <p>
-<b>W3C Web Education Community Group Wiki</b> [https://www.w3.org/community/webed/wiki/Main_Page](https://www.w3.org/community/webed/wiki/Main_Page)
+<b>W3C Web Education Community Group Wiki</b>
+<a href="https://www.w3.org/community/webed/wiki/Main_Page">https://www.w3.org/community/webed/wiki/Main_Page</a>
 </p>
 
 <p>
-<b>Mozilla Developer Guide</b> [https://developer.mozilla.org/en-US/docs/Web/Guide](https://developer.mozilla.org/en-US/docs/Web/Guide)
+<b>Mozilla Developer Guide</b>
+<a href="https://developer.mozilla.org/en-US/docs/Web/Guide">https://developer.mozilla.org/en-US/docs/Web/Guide</a>
 </p>
 
 <h4>Course Software</h4>
 <p>
-<b>Node.js (for webserver development)</b> [https://nodejs.org/en](https://nodejs.org/en) Node is a fast server-side JavaScript engine based on Google's V8 JavaScript interpreter.  We will be writing our webserver using Node.
+<b>Node.js (for webserver development)</b>
+<a href="https://nodejs.org/en">https://nodejs.org/en</a> Node is a fast server-side JavaScript engine based on Google's V8 JavaScript interpreter.  We will be writing our webserver using Node.
 </p>
 
 <p>
-<b>Atom (Integraged Development Environment)</b> [https://atom.io](https://atom.io) Atom is an IDE that uses HTML5 and JavaScript as its underlying technologies, which akes it a natrual fit for web development.  You will also want the atom-html-preview package [https://atom.io/packages/atom-html-preview](https://atom.io/packages/atom-html-preview).
+<b>Atom (Integraged Development Environment)</b> 
+<a href="https://atom.io">https://atom.io</a> Atom is an IDE that uses HTML5 and JavaScript 
+as its underlying technologies, which akes it a natrual fit for web development.  You will also want the atom-html-preview package 
+<a href="https://atom.io/packages/atom-html-preview">https://atom.io/packages/atom-html-preview</a>.
 </p>
 
 <p>
-<b>Google Chrome (Web Browser)</b> https://www.google.com/chrome/browser/desktop/ Google chrome is a fast, cross-platform web browser with a robust set of developer tools.  See [https://developer.chrome.com/devtools](https://developer.chrome.com/devtools) for details.  While you will always want to verify your web app using all browsers, we will be grading your work based on its performance in Chrome.
+<b>Google Chrome (Web Browser)</b>
+<a href="https://www.google.com/chrome/browser/desktop/">https://www.google.com/chrome/browser/desktop/</a> 
+Google chrome is a fast, cross-platform web browser with a robust set of developer tools.  See 
+<a href="https://developer.chrome.com/devtools">https://developer.chrome.com/devtools</a> for details.  While you will always want to verify your web app using all browsers, we will be grading your work based on its performance in Chrome.
 </p>
 
 <h3>Attendance Policy</h3>
@@ -246,10 +255,11 @@ undergraduate and graduate courses on-campus, off-campus, and via distance learn
 
 <p>
 A component vital to the Honor & Integrity System is the inclusion of the 
-[Honor Pledge](https://www.k-state.edu/honor/honorsystem/pledge.html) which applies 
+<a href="https://www.k-state.edu/honor/honorsystem/pledge.html">Honor Pledge</a>
+ which applies 
 to all assignments, examinations, or other course work undertaken by students. The 
-Honor Pledge is implied, _whether or not_ it is stated: __"On my honor, as a student, 
-I have neither given nor received unauthorized aid on this academic work."__
+Honor Pledge is implied, <i>whether or not</i> it is stated: <b>"On my honor, as a student, 
+I have neither given nor received unauthorized aid on this academic work."</b>
 </p>
 
 <p>
@@ -259,14 +269,15 @@ you are in doubt, please ask
 </p>
 
 <p>
-A [grade of XF](https://www.k-state.edu/honor/faculty/xfagree.html) can result from a 
+A 
+<a href="https://www.k-state.edu/honor/faculty/xfagree.html">grade of XF</a> can result from a 
 breach of academic honesty. The F indicates failure in the course; the X indicates the 
 reason is an Honor Pledge violation.
 </p>
 
 <p>
 For more information, visit the Honor & Integrity System home web page at: 
-[http://www.k-state.edu/honor/](https://www.k-state.edu/honor/)
+<a href="https://www.k-state.edu/honor/">https://www.k-state.edu/honor/</a>
 </p>
 
 <h3>Students with Disabilities</h3>
@@ -278,15 +289,16 @@ with a wide range of disabilities including, but not limited to, physical disabi
 medical conditions, learning disabilities, attention deficit disorder, depression, and 
 anxiety. If you are a student enrolled in campus/online courses through the Manhattan 
 or Olathe campuses, contact the Student Access Center at 
-[accesscenter@k-state.edu](mailto:accesscenter@k-state.edu), 785-532-6441.
+<a href="mailto:accesscenter@k-state.edu">accesscenter@k-state.edu</a>, 785-532-6441.
 </p>
 
 <h3>Classroom Conduct</h3>
 <p>
 All student activities in the University, including this course, are governed by the 
-(Student Judicial Conduct Code)[http://www.k-state.edu/sga/judicial/] as outlined in 
+
+(Student Judicial Conduct Code)[<a href="http://www.k-state.edu/sga/judicial/">http://www.k-state.edu/sga/judicial/</a>] as outlined in 
 the Student Governing Association 
-(By Laws)[http://www.k-state.edu/sga/old_files/sgadocs/ByLaws.pdf], Article V, Section 3, 
+(By Laws)[<a href="http://www.k-state.edu/sga/old_files/sgadocs/ByLaws.pdf">http://www.k-state.edu/sga/old_files/sgadocs/ByLaws.pdf</a>], Article V, Section 3, 
 number 2. Students who engage in behavior that disrupts the learning environment may be 
 asked to leave the class.
 </p>
@@ -297,7 +309,7 @@ Kansas State University is committed to providing a safe teaching and learning e
 for student and faculty members. In order to enhance your safety in the unlikely case of a 
 campus emergency make sure that you know where and how to quickly exit your classroom and 
 how to follow any emergency directives. To view additional campus emergency information go 
-to the University's main page, [www.k-state.edu](https://www.k-state.edu/), and click on 
+to the University's main page, <a href="https://www.k-state.edu/">www.k-state.edu</a>, and click on 
 the Emergency Information button.
 </p>
 </body>
